--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,26 @@ thriftpy2 = "^0.4.9"
 pytest = "^5.3.1"
 pytest-asyncio = "^0.10.0"
 sphinx = "^2.2.2"
+black = "^19.10b0"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+target-version = ['py37', 'py38']
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
