--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,3 +6,8 @@ repos:
       - id: black
         language_version: python3.8
 
+-  repo: https://github.com/pre-commit/pre-commit-hooks
+   rev: v1.2.3
+   hooks:
+      - id: flake8
+
