--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,10 +36,7 @@ pytest = "^5.3.1"
 pytest-asyncio = "^0.10.0"
 sphinx = "^2.2.2"
 black = "^19.10b0"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+flake8 = "^3.7.9"
 
 [tool.black]
 target-version = ['py37', 'py38']
@@ -58,3 +55,7 @@ exclude = '''
   | dist
 )/
 '''
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
+
