--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,9 @@
 version: 2
 updates:
-- package-ecosystem: pip
+- package-ecosystem: "github-actions"
   directory: "/"
   schedule:
-    interval: weekly
-    time: "21:00"
-  open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: pytest-asyncio
-    versions:
-    - 0.15.0
-  - dependency-name: black
-    versions:
-    - 20.8b1
+    interval: "monthly"
+    day: "monday"
+    time: "16:00"
+    timezone: "UTC"
